--- a/first.html
+++ b/first.html
@@ -6,5 +6,6 @@
 <body>
 <h1> Greetings!</h1>
 <p> This is my new content. Check and do read it. </p>
+  <img src = "https://i.pinimg.com/736x/74/9a/e7/749ae74ecab83523c2279b213fec8ed9.jpg" alt = "girl with butterfly"> 
 </body>
 </html>
